<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070707"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#090707">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/home_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center">

           <ImageView
               android:layout_width="40dp"
               android:layout_height="30dp"
               android:src="@drawable/headphone"
               android:contentDescription="@string/image"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="MUSIC PLAYER"
               android:textSize="25sp"
               android:textStyle="bold"
               android:textColor="@drawable/splash_background_color"/>

       </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#0B0909">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/singer"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#fff"
            android:padding="5dp"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/arijit_singh_playlist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="#090707"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/arijit_singh"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FD02A9" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:textColor="#fff"
                    android:layout_gravity="center"/>

            </LinearLayout>

                <LinearLayout
                    android:id="@+id/jubin_nautiyal_song"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:src="@drawable/jubin_nautiyal"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#FD02A9" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jubin"
                        android:padding="10dp"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:textColor="#fff"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/neha_kakkar_song"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:src="@drawable/neha_kakkar"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#FD02A9"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/neha"
                        android:padding="10dp"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:textColor="#fff"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/badshah_songs"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:src="@drawable/badshah"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#FD02A9" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/badshah"
                        android:padding="10dp"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:textColor="#fff"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/honey_singh_playlist"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:src="@drawable/honey_singh"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#FD02A9"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/honey"
                        android:padding="10dp"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:textColor="#fff"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shreya_ghoshal_song"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:src="@drawable/shreya_ghoshal"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#FD02A9"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Shreya"
                        android:padding="10dp"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:textColor="#fff"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/guru_randhawa_song"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:src="@drawable/guru_randhawa"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#FD02A9"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guru"
                        android:padding="10dp"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:textColor="#fff"
                        android:layout_gravity="center"/>

                </LinearLayout>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Popular Songs"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#fff"
        android:padding="5dp"/>


     <androidx.recyclerview.widget.RecyclerView
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="10dp"
         android:id="@+id/glideLayoutRecyclerView"/>

</LinearLayout>